--- a/app/assets/stylesheets/styles/footer.scss
+++ b/app/assets/stylesheets/styles/footer.scss
@@ -9,6 +9,7 @@
 
 	footer {
 		margin: 10px;
+		height: 100px;
 		a {
 			color: $dark-grey;
 			text-decoration: none;
